<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditUser">


    <TextView
        android:id="@+id/textStringEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_edituser"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edTextEditEmailUserName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/textStringEdit"
        android:layout_alignParentStart="true"
        android:layout_marginTop="180dp"
        android:inputType="textPersonName"
        android:hint="@string/string_username"
        android:background="@drawable/shap_edittext"/>

    <EditText
        android:id="@+id/edTextEditEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/edTextEditEmailUserName"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/string_email"
        android:background="@drawable/shap_edittext"/>


    <EditText
        android:id="@+id/edTextEditPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/edTextEditEmail"
        android:layout_alignParentLeft="true"
        android:inputType="textVisiblePassword"
        android:layout_marginTop="20dp"
        android:hint="@string/string_password"
        android:background="@drawable/shap_edittext"/>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edTextEditPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/shap_button"
        android:text="@string/string_edit"
        android:textColor="@color/white"
        android:textSize="15dp" />

</RelativeLayout>