<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".signup">


    <TextView
        android:id="@+id/textStringSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_signup"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/edTextSignUpUserName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/textStringSignUp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="180dp"
        android:inputType="textPersonName"
        android:hint="@string/string_username"
        android:background="@drawable/shap_edittext"/>

    <EditText
        android:id="@+id/edTextSignUpEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/edTextSignUpUserName"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:hint="@string/string_email"
        android:background="@drawable/shap_edittext"/>


    <EditText
        android:id="@+id/edTextSignupPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/edTextSignUpEmail"
        android:layout_alignParentLeft="true"
        android:inputType="textVisiblePassword"
        android:layout_marginTop="20dp"
        android:hint="@string/string_password"
        android:background="@drawable/shap_edittext"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edTextSignupPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/shap_button"
        android:text="@string/string_signup"
        android:textColor="@color/white"
        android:textSize="15dp" />


</RelativeLayout>