<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Add_Student">


    <TextView
        android:id="@+id/tectStringAddStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_addStd"
        android:textColor="@color/black"
        android:textSize="@dimen/_25ssp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tectStringAddStudent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/shap_edittext"
        android:hint="@string/string_firstName"
        android:inputType="textPersonName" />

    <EditText
    android:id="@+id/edTextLastName"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:inputType="textPersonName"
    android:layout_below="@+id/edTextFirstName"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="7dp"
    android:layout_marginTop="10dp"
    android:hint="@string/string_lastName"
    android:layout_marginEnd="12dp"
    android:background="@drawable/shap_edittext" />


    <TextView
        android:id="@+id/edTextDateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edTextLastName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:hint="@string/string_dateOfbirth"
        android:drawableEnd="@drawable/ic_baseline_calendar_month_24"
        android:layout_marginEnd="12dp"
        android:background="@drawable/shap_text_view" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@+id/edTextDateOfBirth"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="114dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcSubject1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        </androidx.recyclerview.widget.RecyclerView>


    </RelativeLayout>


    <Button
        android:id="@+id/btnAddStudent"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/shap_button"
        android:text="@string/string_addStd"
        android:textColor="@color/white"
        android:textSize="15dp" />





</RelativeLayout>